--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "./src/main/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
+    "start:preload": "cross-env NODE_ENV=development rspack --config ./src/preload/rspack.config.dev.ts",
+    "start:renderer": "cross-env NODE_ENV=development rspack serve --config ./src/renderer/rspack.config.dev.ts",
     "start:main": "cross-env NODE_ENV=development electronmon -r ts-node/register/transpile-only ."
   },
   "keywords": [
@@ -18,6 +19,8 @@
     "rspack"
   ],
   "devDependencies": {
+    "@rspack/cli": "^0.3.6",
+    "@types/fs-extra": "^11.0.2",
     "@types/node": "^20.8.2",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
@@ -32,6 +35,7 @@
   },
   "dependencies": {
     "electron-log": "^4.4.8",
+    "fs-extra": "^11.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
