--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@rspack/cli": "^0.3.6",
     "@svgr/webpack": "^8.1.0",
     "@types/fs-extra": "^11.0.2",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^20.8.2",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
@@ -31,12 +32,15 @@
     "electron": "^26.2.4",
     "electronmon": "^2.0.2",
     "eslint": "^8.50.0",
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "electron-log": "^4.4.8",
     "fs-extra": "^11.1.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
