--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "build:main": "cross-env NODE_ENV=production rspack --config ./src/main/rspack.config.prod.ts",
     "build": "npm run clean && concurrently \"npm run build:main\" \"npm run build:preload\" \"npm run build:renderer\"",
     "clean": "ts-node ./scripts/clean.ts",
-    "pack:x86": "electron-builder -w --ia32 -c ./build.config.json",
-    "pack:x64": "electron-builder -w --x64 -c ./build.config.json",
-    "pack:mac": "electron-builder --mac -c ./build.config.json",
-    "package": "npm run build && electron-builder build -c ./build.config.json --publish never"
+    "pack:x86": "electron-builder -w --ia32 -c ./build.config.json --publish never",
+    "pack:x64": "electron-builder -w --x64 -c ./build.config.json --publish never",
+    "pack:mac": "electron-builder --mac -c ./build.config.json --publish never",
+    "package:local": "npm run build && electron-builder build -c ./build.config.json --publish never",
+    "package": "npm run build && electron-builder build -c ./build.config.json --publish always"
   },
   "keywords": [
     "electron",
@@ -42,6 +43,7 @@
     "electron": "^26.2.4",
     "electron-builder": "^24.6.4",
     "electron-log": "^4.4.8",
+    "electron-updater": "^6.1.4",
     "electronmon": "^2.0.2",
     "eslint": "^8.50.0",
     "fs-extra": "^11.1.1",
