--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "@typescript-eslint/parser": "^6.7.4",
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.10",
     "electron": "^26.2.4",
     "electron-builder": "^24.6.4",
-    "electron-log": "^4.4.8",
+    "electron-log": "5.0.0-rc.1",
     "electron-updater": "^6.1.4",
     "electronmon": "^2.0.2",
     "eslint": "^8.50.0",
