--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rspack"
   ],
   "devDependencies": {
+    "@arco-design/web-react": "^2.55.0",
     "@rspack/cli": "^0.3.6",
     "@svgr/webpack": "^8.1.0",
     "@types/fs-extra": "^11.0.2",
@@ -44,12 +45,12 @@
     "electron-updater": "^6.1.4",
     "eslint": "^8.50.0",
     "fs-extra": "^11.1.1",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
-    "sass": "^1.68.0",
-    "sass-loader": "^13.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
