--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@svgr/webpack": "^8.1.0",
     "@types/fs-extra": "^11.0.2",
     "@types/lodash": "^4.14.199",
+    "@types/lodash-es": "^4.17.10",
     "@types/node": "^20.8.2",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "axios": "^1.6.0",
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
@@ -51,6 +53,7 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
