--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "axios": "^1.6.0",
+    "classnames": "^2.3.2",
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
