--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 electron_mirror=https://npm.taobao.org/mirrors/electron/
-registry=https://registry.npm.taobao.org
+registry=https://registry.npmmirror.com
 auto-install-peers=true
