--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
   "description": "An Electron boilerplate including TypeScript, React, Rspack and ESLint.",
   "main": "build/loader.js",
   "scripts": {
-    "start": "npm run build:preload && npm run start:renderer",
-    "start:renderer": "cross-env NODE_ENV=development rspack serve --config ./src/renderer/rspack.config.dev.ts",
+    "start": "npm run build:preload && pnpm --filter renderer run start",
     "start:main": "cross-env NODE_ENV=development electron -r ts-node/register/transpile-only ./src/main/index.ts",
     "build:preload": "cross-env NODE_ENV=production rspack --config ./src/preload/rspack.config.prod.ts",
-    "build:renderer": "cross-env NODE_ENV=production rspack --config ./src/renderer/rspack.config.prod.ts",
     "build:main": "cross-env NODE_ENV=production rspack --config ./src/main/rspack.config.prod.ts",
-    "build": "npm run clean && concurrently \"npm run build:main\" \"npm run build:preload\" \"npm run build:renderer\"",
+    "build": "npm run clean && concurrently \"npm run build:main\" \"npm run build:preload\" \"pnpm --filter renderer run build\"",
     "clean": "ts-node ./scripts/clean.ts",
     "package:local": "npm run build && electron-builder build -c ./build.config.json --publish never",
     "package": "npm run build && electron-builder build -c ./build.config.json --publish always",
     "analyze:preload": "cross-env NODE_ENV=production rspack --config ./src/preload/rspack.config.prod.ts --analyze",
-    "analyze:renderer": "cross-env NODE_ENV=production rspack --config ./src/renderer/rspack.config.prod.ts --analyze",
     "analyze:main": "cross-env NODE_ENV=production rspack --config ./src/main/rspack.config.prod.ts --analyze"
   },
   "keywords": [
@@ -33,22 +30,14 @@
     "rspack"
   ],
   "devDependencies": {
-    "@arco-design/web-react": "^2.55.0",
     "@rspack/cli": "^0.3.6",
-    "@svgr/webpack": "^8.1.0",
     "@types/fs-extra": "^11.0.2",
     "@types/lodash": "^4.14.199",
-    "@types/lodash-es": "^4.17.10",
     "@types/node": "^20.8.2",
-    "@types/react": "^18.2.24",
-    "@types/react-dom": "^18.2.8",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
-    "axios": "^1.6.0",
-    "classnames": "^2.3.2",
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
-    "dayjs": "^1.11.10",
     "electron": "^26.2.4",
     "electron-builder": "^24.6.4",
     "electron-log": "5.0.0-rc.1",
@@ -56,12 +45,7 @@
     "electron-updater": "^6.1.4",
     "eslint": "^8.50.0",
     "fs-extra": "^11.1.1",
-    "less": "^4.2.0",
-    "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -69,6 +53,9 @@
   "devEngines": {
     "node": ">=16.x",
     "npm": ">=8.x"
+  },
+  "pnpm": {
+    "workspaces": true
   },
   "license": "MIT"
 }
