--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-electron_mirror=https://npm.taobao.org/mirrors/electron/
+electron_mirror=https://npmmirror.com/mirrors/electron/
 registry=https://registry.npmmirror.com
 auto-install-peers=true
