--- a/package.json
+++ b/package.json
@@ -1,26 +1,8 @@
 {
   "name": "electron-react-rspack",
-  "author": "Ryan",
-  "homepage": "https://github.com/RyanProMax/electron-react-rspack#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RyanProMax/electron-react-rspack.git"
-  },
   "version": "0.0.5",
+  "author": "Ryan",
   "description": "An Electron boilerplate including TypeScript, React, Rspack and ESLint.",
-  "main": "build/loader.js",
-  "scripts": {
-    "start": "npm run build:preload && pnpm --filter renderer run start",
-    "start:main": "cross-env NODE_ENV=development electron -r ts-node/register/transpile-only ./src/main/index.ts",
-    "build:preload": "cross-env NODE_ENV=production rspack --config ./src/preload/rspack.config.prod.ts",
-    "build:main": "cross-env NODE_ENV=production rspack --config ./src/main/rspack.config.prod.ts",
-    "build": "npm run clean && concurrently \"npm run build:main\" \"npm run build:preload\" \"pnpm --filter renderer run build\"",
-    "clean": "ts-node ./scripts/clean.ts",
-    "package:local": "npm run build && electron-builder build -c ./build.config.json --publish never",
-    "package": "npm run build && electron-builder build -c ./build.config.json --publish always",
-    "analyze:preload": "cross-env NODE_ENV=production rspack --config ./src/preload/rspack.config.prod.ts --analyze",
-    "analyze:main": "cross-env NODE_ENV=production rspack --config ./src/main/rspack.config.prod.ts --analyze"
-  },
   "keywords": [
     "electron",
     "boilerplate",
@@ -29,33 +11,31 @@
     "ts",
     "rspack"
   ],
+  "main": "build/loader.js",
+  "scripts": {
+    "start": "pnpm --filter preload run build && pnpm --filter renderer run start",
+    "build": "npm run clean && concurrently \"pnpm --filter main run build\" \"pnpm --filter preload run build\" \"pnpm --filter renderer run build\"",
+    "clean": "ts-node ./scripts/clean.ts",
+    "package:local": "npm run build && electron-builder build -c ./build.config.json --publish never",
+    "package": "npm run build && electron-builder build -c ./build.config.json --publish always"
+  },
   "devDependencies": {
     "@rspack/cli": "^0.3.6",
-    "@types/fs-extra": "^11.0.2",
-    "@types/lodash": "^4.14.199",
-    "@types/node": "^20.8.2",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "concurrently": "^8.2.1",
-    "cross-env": "^7.0.3",
-    "electron": "^26.2.4",
-    "electron-builder": "^24.6.4",
-    "electron-log": "5.0.0-rc.1",
-    "electron-store": "^8.1.0",
-    "electron-updater": "^6.1.4",
     "eslint": "^8.50.0",
-    "fs-extra": "^11.1.1",
-    "lodash": "^4.17.21",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.1"
+  },
+  "homepage": "https://github.com/RyanProMax/electron-react-rspack#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RyanProMax/electron-react-rspack.git"
   },
   "devEngines": {
     "node": ">=16.x",
     "npm": ">=8.x"
-  },
-  "pnpm": {
-    "workspaces": true
   },
   "license": "MIT"
 }
