--- a/src/main/package.json
+++ b/src/main/package.json
@@ -2,9 +2,22 @@
   "name": "main",
   "version": "0.0.1",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=development electron -r ts-node/register/transpile-only ./index.ts",
+    "build": "cross-env NODE_ENV=production rspack --config ./rspack.config.prod.ts",
+    "analyze": "cross-env NODE_ENV=production rspack --config ./rspack.config.prod.ts --analyze"
   },
-  "dependencies": {
-    "dayjs": "^1.11.10"
+  "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.11.30",
+    "cross-env": "^7.0.3",
+    "dayjs": "^1.11.10",
+    "electron": "^26.2.4",
+    "electron-builder": "^24.13.3",
+    "electron-log": "^5.1.2",
+    "electron-store": "^8.2.0",
+    "electron-updater": "^6.1.8",
+    "fs-extra": "^11.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
