refactor: files & update version

--- a/src/main/package.json
+++ b/src/main/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.30",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
@@ -17,6 +18,7 @@
     "electron-store": "^8.2.0",
     "electron-updater": "^6.1.8",
     "fs-extra": "^11.2.0",
+    "lodash": "^4.17.21",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
