--- a/package.json
+++ b/package.json
@@ -21,12 +21,26 @@
   },
   "devDependencies": {
     "@rspack/cli": "^0.3.6",
+    "@types/fs-extra": "^11.0.4",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "axios": "^1.7.2",
     "concurrently": "^8.2.1",
+    "cross-env": "^7.0.3",
+    "dayjs": "^1.11.10",
+    "electron": "^26.2.4",
+    "electron-builder": "^24.13.3",
+    "electron-log": "^5.1.2",
+    "electron-store": "^8.2.0",
+    "electron-updater": "^6.1.8",
     "eslint": "^8.50.0",
+    "fs-extra": "^11.2.0",
+    "lodash": "^4.17.21",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "homepage": "https://github.com/RyanProMax/electron-react-rspack#readme",
   "repository": {
