--- a/src/renderer/package.json
+++ b/src/renderer/package.json
@@ -8,25 +8,17 @@
   },
   "dependencies": {
     "@arco-design/web-react": "^2.61.1",
-    "axios": "^1.6.8",
     "classnames": "^2.5.1",
-    "electron-log": "^5.1.2",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "@types/fs-extra": "^11.0.4",
-    "@types/lodash": "^4.17.0",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.2.22",
-    "cross-env": "^7.0.3",
-    "fs-extra": "^11.2.0",
     "less": "^4.2.0",
-    "less-loader": "^12.2.0",
-    "lodash": "^4.17.21",
-    "typescript": "^5.2.2"
+    "less-loader": "^12.2.0"
   }
 }
