--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "electron": "^26.2.4",
     "electron-builder": "^24.13.3",
     "electron-log": "^5.1.2",
