--- a/src/main/package.json
+++ b/src/main/package.json
@@ -2,8 +2,8 @@
   "name": "main",
   "version": "0.0.1",
   "scripts": {
-    "start": "cross-env NODE_ENV=development electron -r ts-node/register/transpile-only ./index.ts",
-    "build": "cross-env NODE_ENV=production rspack --config ./rspack.config.prod.ts",
-    "analyze": "cross-env NODE_ENV=production rspack --config ./rspack.config.prod.ts --analyze"
+    "start": "cross-env NODE_ENV=development NODE_OPTIONS=\"--import tsx\" electron ./index.ts",
+    "build": "rsbuild build",
+    "analyze": "cross-env BUNDLE_ANALYZE=true rsbuild build"
   }
 }
