fix: electron install error

--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "node": ">=20.x",
     "npm": ">=10.x"
   },
+  "pnpm": {
+    "onlyBuiltDependencies": ["electron"]
+  },
   "license": "MIT"
 }
