--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: "20"
 
       - name: Install pnpm
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v3
         with:
           version: latest
 
@@ -36,7 +36,7 @@ jobs:
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
       - name: Setup pnpm cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ${{ env.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
@@ -51,26 +51,18 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
-      # - name: Cleanup Artifacts for Windows
-      #   if: matrix.os == 'windows-latest'
-      #   run: |
-      #     npx rimraf --glob "release/!(*.exe)"
-
-      # - name: Cleanup Artifacts for MacOS
-      #   if: matrix.os == 'macos-latest'
-      #   run: |
-      #     npx rimraf --glob "release/!(*.dmg)"
-
-      # - name: upload artifacts
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: ${{ matrix.os }}
-      #     path: release
-
-      # - name: release
+      # - name: Create Release
       #   uses: softprops/action-gh-release@v0.1.14
       #   if: startsWith(github.ref, 'refs/tags/')
       #   with:
-      #     files: "release/**"
+      #     files: |
+      #       release/*.exe
+      #       release/*.dmg
+      #       release/*.zip
+      #       release/*.blockmap
+      #       release/latest*.yml
+      #     draft: false
+      #     prerelease: false
+      #     generate_release_notes: true
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
