--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "package": "pnpm build && electron-builder build -c ./build.config.json --publish always"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@rsbuild/core": "^1.4.3",
     "@rspack/cli": "^1.4.3",
     "@rspack/core": "^1.4.3",
@@ -41,6 +42,8 @@
     "electron-updater": "^6.6.2",
     "eslint": "^9.30.1",
     "fs-extra": "^11.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "lodash": "^4.17.21",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
@@ -52,12 +55,19 @@
     "type": "git",
     "url": "git+https://github.com/RyanProMax/electron-react-rspack.git"
   },
-  "devEngines": {
+  "engines": {
     "node": ">=20.x",
     "npm": ">=10.x"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["electron"]
+    "onlyBuiltDependencies": [
+      "electron"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --fix"
+    ]
   },
   "license": "MIT"
 }
