--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "incremental": true,
     "target": "es2021",
-    "module": "commonjs",
+    "module": "NodeNext",
     "lib": [
       "dom",
       "es2021"
@@ -11,7 +11,7 @@
     "strict": true,
     "sourceMap": true,
     "baseUrl": "./",
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
@@ -23,7 +23,6 @@
     "assets/**/*"
   ],
   "exclude": [
-    "release/build",
-    "release/app/dist"
+    "release/**/*"
   ]
 }
