--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "package": "pnpm build && electron-builder build -c ./build.config.json --publish always"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.30.1",
     "@rsbuild/core": "^1.4.3",
     "@rspack/cli": "^1.4.3",
@@ -41,10 +42,15 @@
     "electron-store": "^10.1.0",
     "electron-updater": "^6.6.2",
     "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
     "fs-extra": "^11.3.0",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "lodash": "^4.17.21",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
@@ -65,8 +71,11 @@
     ]
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": [
+    "*.+(js|jsx|ts|tsx)": [
       "eslint --fix"
+    ],
+    "*.+(js|jsx|ts|tsx|json|css|md|mdx)": [
+      "prettier --write"
     ]
   },
   "license": "MIT"
