--- a/src/renderer/package.json
+++ b/src/renderer/package.json
@@ -2,9 +2,9 @@
   "name": "renderer",
   "version": "0.0.1",
   "scripts": {
-    "start": "rsbuild dev",
-    "build": "rsbuild build",
-    "analyze": "cross-env BUNDLE_ANALYZE=true rsbuild build"
+    "start": "rspack serve",
+    "build": "rspack build",
+    "analyze": "cross-env BUNDLE_ANALYZE=true rspack build --analyze"
   },
   "dependencies": {
     "@arco-design/web-react": "^2.66.1",
@@ -14,11 +14,14 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@rsbuild/plugin-less": "^1.2.4",
-    "@rsbuild/plugin-react": "^1.3.3",
-    "@rsbuild/plugin-svgr": "^1.2.0",
+    "@arco-plugins/unplugin-react": "2.0.0-beta.5",
+    "@svgr/webpack": "^8.1.0",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6"
+    "@types/react-dom": "^19.1.6",
+    "css-loader": "^7.1.2",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
+    "style-loader": "^4.0.0"
   }
 }
